<?xml version="1.0"?>
<package format="2">
  <name>sonar_reader</name>
  <version>0.0.0</version>
  <description>Read from Sonar Sensor </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tim@todo.todo">tim</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>nodelet</build_depend> -->
  <!-- <build_depend>roscpp</build_depend> -->
  <!-- <build_depend>std_msgs</build_depend> -->
  <!-- <build_export_depend>nodelet</build_export_depend> -->
  <!-- <build_export_depend>roscpp</build_export_depend> -->
  <!-- <build_export_depend>std_msgs</build_export_depend> -->
  <!-- <exec_depend>nodelet</exec_depend> -->
  <!-- <exec_depend>roscpp</exec_depend> -->
  <!-- <exec_depend>std_msgs</exec_depend> -->
  
  <depend>mrs_lib</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
